--- a/app/views/about/what.html.erb
+++ b/app/views/about/what.html.erb
@@ -8,19 +8,20 @@
     <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
 </div>
 <div class="col3">
-  <h2>Paso 2:</h2>
-  <h1>Consumo</h1>
+  <h2>Pasos 2 y 3:</h2>
+  <h1>Evolución del consumo</h1>
   <img src="/images/consumo.png">
     <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
 </div>
 <div class="col3">
-  <h2>Paso 3:</h2>
-  <h1>Resultados</h1>
+  <h2>Resultados:</h2>
+  <h1>Guía de ahorro</h1>
   <img src="/images/empty.png">
     <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
 </div>
 
-
+<br/>
+<h2>Para qué sirve</h2>
 <p class="about">Suspendisse vitae ligula leo. Fusce egestas, odio sit amet fermentum blandit, mauris erat malesuada magna, ac molestie mi sem sit amet nisl. Mauris malesuada ligula libero. Suspendisse ipsum nunc, lacinia sit amet lacinia ac, rutrum porta mi. Pellentesque auctor rhoncus vehicula. Duis dolor tellus, imperdiet in consequat sit amet, volutpat sed nisl. Nunc aliquam convallis ipsum, ultricies fermentum tortor pellentesque sed. Duis eleifend tempor nunc vitae ultricies. Nam in urna massa. Morbi condimentum pulvinar nisl id porttitor. Nam porta tempor elit nec eleifend. Donec tempor neque sit amet nisi blandit convallis. Vestibulum dictum accumsan nunc sit amet tincidunt. Aenean faucibus gravida tortor sit amet ultrices.</p>
 <br/>
 <h2>Quiénes somos</h2>
