--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
-<% title "Edit User" %>
-
-<%= render :partial => 'form' %>
+<div class="dialog">
+  <%= title t(:title), :tag => :h2 %>
+  <%= render :partial => 'form' %>
+</div>
 
