--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -14,10 +14,11 @@
       <div id="bar" class="<%= @controller.class.to_s.downcase %>">
         <div id="header">
           <h1>E3E</h1>
+          <h2>encuesta sobre la energía en la edifcación existente</h2>
           <div class="session">
             <% if signed_in? %>
-              Hola <%= current_user.username %>
-              <%= link_to t('users.edit'), edit_user_path(current_user) %>
+              <span class="welcome" style="display: none">Hola <%= current_user.username %></span>
+              <%= link_to t('users.profile'), edit_user_path(current_user) %>
               <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
             <% else -%>
               <%= link_to 'Entrar', new_user_sessions_path %>
