--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,18 +2,22 @@
 
 <% form_for @user do |f| %>
   <%= f.error_messages %>
+  <p class="info"><%= t('info.username') %></p>
   <p>
     <%= f.label t(:username) %>
     <%= f.text_field :username, :class => 'not_empty length_more_than_4' %>
   </p>
+  <p class="info"><%= t(@user.new_record? ? 'info.newpass' : 'info.editpass') %></p>
+  <% validation = @user.new_record? ? 'not_empty length_more_than_4'  : 'length_more_than_4'  %>
   <p>
-    <%= f.label t(:password) %>
-    <%= f.password_field :password, :class => 'not_empty length_more_than_4' %>
+    <%= f.label :password, t(:password) %>
+    <%= f.password_field :password, :class => validation %>
   </p>
   <p>
-    <%= f.label t(:password_confirmation) %>
-    <%= f.password_field :password_confirmation, :class => 'not_empty length_more_than_4' %>
+    <%= f.label :password_confirmation, t(:password_confirmation) %>
+    <%= f.password_field :password_confirmation, :class => validation  %>
   </p>
+  <p class="info"><%= t('info.qa') %></p>
   <p>
     <%= f.label t(:question) %>
     <%= f.text_field :question, :class => 'not_empty length_more_than_4' %>
