borders and alpha ie

--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -7,6 +7,10 @@
     <%= stylesheet_link_tag 'e3e' %>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
     <%= javascript_include_tag 'jquery.validator.js'  %>
+    <%= javascript_include_tag 'DD_roundies.js'  %>
+    <script type="text/javascript">
+      DD_roundies.addRule('.flash_notice', '5px');
+    </script>
     <%= yield :header %>
   </head>
   <body>
