--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -21,10 +21,15 @@ html {
 .round {
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
+    -ms-border-radius: 0.5em;
 }
 .tab-borders {
     -moz-border-radius:  0 0 0.5em 0.5em;
     -webkit-border-bottom-left-radius: 0.5em; -webkit-border-bottom-right-radius: 0.5em;
+    -ms-border-radius: 10px;
+}
+.dada {
+    behavior:url(/stylesheets/border-radius.htc);
 }
 
 
