--- a/app/views/about/welcome.html.erb
+++ b/app/views/about/welcome.html.erb
@@ -4,19 +4,19 @@
 <div class="col3">
   <h2>Paso 1:</h2>
   <h1>Encuesta</h1>
-  <img src="/images/encuesta.png">
+  <img src="/images/encuesta.png" alt="encuesta" />
     <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
 </div>
 <div class="col3">
   <h2>Pasos 2 y 3:</h2>
   <h1>Evolución del consumo</h1>
-  <img src="/images/consumo.png">
+  <img src="/images/consumo.png" alt="evolución del consumo" />
     <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
 </div>
 <div class="col3">
   <h2>Resultados:</h2>
   <h1>Guía de ahorro</h1>
-  <img src="/images/empty.png">
+  <img src="/images/empty.png" alt="guía de ahorro"/>
     <p>Aliquam auctor leo eu metus luctus bibendum. Mauris tincidunt, lorem eu convallis mattis, arcu urna hendrerit lorem, eu iaculis mauris nisi sodales arcu. Nulla eu mauris massa. Ut sed imperdiet enim. Nullam dictum ornare purus, pretium pretium sapien faucibus non. </p>
 </div>
 
