--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <title>E3E - <%= yield(:title) || 'Prototipo' %></title>
+    <title>E3E - <%= yield(:title) || 'E3E' %></title>
     <!-- link rel="icon" href="images/e3e.ico" type="image/x-icon" / -->
     <%= stylesheet_link_tag 'e3e' %>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
@@ -16,31 +16,24 @@
   <body>
     <div id="top">
       <div id="bar" class="<%= @controller.class.to_s.downcase %>">
-        <div id="header">
-          <h1>E3E</h1>
-          <h2>encuesta sobre la energía en la edifcación existente</h2>
-          <div class="session">
-            <% if signed_in? %>
-              <span class="welcome" style="display: none">Hola <%= current_user.username %></span>
-              <%= link_to t('users.profile'), edit_user_path(current_user) %>
-              <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
-            <% else -%>
-              <%= link_to 'Entrar', new_user_sessions_path %>
-              <%= link_to 'Darse de alta', new_user_path %>
-            <% end -%>
-            <% if current_admin %>
-              <%= link_to t(:admin_zone), current_admin %>
-            <% end %>
-          </div>
-        </div>
       </div>
       <div id="navigation">
         <div class="sections">
           <%= section t(:about), root_path, :AboutController %>
           <%= section t(:survey), survey_path, :SurveysController %>
-          <%= section t(:gas), gas_path %>
-          <%= section t(:elec), electricidad_path %>
-          <%= section t(:report), report_path, :ReportsController, :class => 'report' %>
+          <%= section t(:gas), gas_path, :GasController %>
+          <%= section t(:elec), electricidad_path, :ElectricidadController %>
+          <%= section t(:report), report_path, :ReportsController %>
+        </div>
+        <div class="session">
+          <% if signed_in? %>
+            <span class="welcome" style="display: none">Hola <%= current_user.username %></span>
+            <%= link_to t('users.profile'), edit_user_path(current_user) %>
+            <%= link_to t(:user_session_close), logout_path, :method => 'delete' %>
+          <% end -%>
+          <% if current_admin %>
+            <%= link_to t(:admin_zone), current_admin %>
+          <% end %>
         </div>
       </div>
     </div>
@@ -52,9 +45,10 @@
       <div class="content">
         <%= yield %>
       </div>
-      <div class="bottom">
-        <%= link_to 'Hecho a mano por c a l c', 'http://calclab.com' %>
-      </div>
+    </div>
+
+    <div class="bottom">
+      <%= link_to 'Hecho a mano por c a l c', 'http://calclab.com' %>
     </div>
   </body>
 </html>
