--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -6,47 +6,56 @@ version: 2.6.0
 */
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}del,ins{text-decoration:none;}
 
+@fondo: #EFEFEA;
+@border: #E2E2DD;
+@gris: #868686;
+@darkgris: #333333;
+@medio: #efefea;
 
-@medio: rgba(0,0,0,0.05);
-@oscuro: rgba(0,0,0,0.2);
-@masoscuro: rgba(0,0,0,0.5);
+@color1: #548C65;
+@color2: #5CBB7A;
+@color3: #33CFAB;
+@color4: #00FFB4;
+@color5: #468F9B;
 
 html {
     font-size: 80%;
-    background-color: #FAFADB;
+    background-color: @fondo;
     color: black;
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
-.round {
+.round {}
+
+.no-round {
     -moz-border-radius: 0.5em;
     -webkit-border-radius: 0.5em;
     -ms-border-radius: 0.5em;
 }
 .tab-borders {
-    -moz-border-radius:  0 0 0.5em 0.5em;
-    -webkit-border-bottom-left-radius: 0.5em; -webkit-border-bottom-right-radius: 0.5em;
-    -ms-border-radius: 10px;
+    -moz-border-radius:  0 0 2px 2px;
+    -webkit-border-bottom-left-radius: 2px; -webkit-border-bottom-right-radius: 2px;
+    -ms-border-radius: 2px;
 }
 .dada {
     behavior:url(/stylesheets/border-radius.htc);
 }
 
 
-.aboutcontroller {background-color: #A726CF;}
-.electricidadcontroller {background-color: #2BA2AF;}
-.gascontroller {background-color: #EF8C00;}
-.surveyscontroller {background-color: #A9014B;}
-.reportscontroller {background-color: #0AAF4F;}
-.usersessionscontroller {background-color: #0c0; }
-.adminsessionscontroller {background-color: #000;}
-.userscontroller {background-color: #0c0; }
-.passwordreminderscontroller {background-color: #efefef;}
+.aboutcontroller {background-color: @color1;}
+.surveyscontroller {background-color: @color2;}
+.gascontroller {background-color: @color3;}
+.electricidadcontroller {background-color: @color4;}
+.reportscontroller {background-color: @color5;}
+.usersessionscontroller {background-color: @color5; }
+.userscontroller {background-color: @color5; }
+.passwordreminderscontroller {background-color: @color5;}
+.adminsessionscontroller {background-color: @color1;}
 
 .container {width: 100%; overflow: hidden;}
 
-h1, h2, h3 {color: #333333;}
-h1 {font-size: 220%; font-weight: bold; letter-spacing: -0.08em;}
+h1, h2, h3 {color: @gris;}
+h1 {font-size: 260%; font-weight: bold; letter-spacing: -0.05em;}
 h2 {font-size: 150%;}
 h3 {font-size: 125%; border-bottom: 1px solid #9F9F9F; margin: 2em 0 1em 0; padding-left: 6.5em;}
 h4 {font-size: 100%; border-bottom: 1px solid #9F9F9F; margin-top: 2em ; margin-left: 7em; padding-left: 1em;  }
@@ -59,25 +68,25 @@ p {margin: 0.4em 0;}
 .help {margin: 1em 0; background-color: @medio; padding: 1em;
     -moz-border-radius: 0.3em; -webkit-border-radius: 0.3em;}
 
-#top {width: 100%; position: fixed; left: 0; top: 0;}
-#bar {width: 100%; overflow: hidden; height: 64px;}
+#top {width: 100%; position: fixed; left: 0; top: 0; z-index: 3000;}
+#bar {width: 100%; overflow: hidden; height: 10px;}
 #header {width: 900px; margin: auto; color: white; }
-#header h1 {float: left; width: 89px; height: 35px; opacity: 0.95; margin-top: 15px;
-    text-indent: -1000px; background-image:url(../images/e3e.gif); background-repeat: no-repeat;}
+#header h1 {float: left; width: 89px; height: 35px; margin-top: 15px; }
 #header h2 {float: left; margin-top: 34px;  font-variant: small-caps; margin-left: 3px;
-    color: rgba(255,255,255,0.9); font-size: 15px; letter-spacing: 0.05em; font-family: Verdana}
-.session {float: right; margin-top: 34px; margin-right: -1em;}
-.session a {font-variant: small-caps; padding: 0.5em; color: white;
-    background-color: @oscuro; .round;}
-.session a:hover {background: @masoscuro;}
+    font-size: 15px; letter-spacing: 0.05em; font-family: Verdana}
+
 #logo {float: left; margin-right: 2em; margin-bottom: 1em;}
 
-#page {width: 900px; margin: 0em auto 5em auto; background-color: white; padding: 12em 1em 0 1em;
-    -moz-border-radius: 0 0 1em 1em;
-    -webkit-border-bottom-left-radius: 1em; -webkit-border-bottom-right-radius: 1em;}
+#page {width: 900px; margin: 0em auto 5em auto; background-color: white; padding: 70px 1em 0 1em;
+    border: 0px solid @border;
+    min-height:500px;
+    height:auto !important;
+    height:500px;
+}
 
-.bottom {text-align: center; font-size: 70%; color: gray; padding: 0.5em 0;
-    margin-top: 2em; border-top: 1px solid #9F9F9F;}
+.bottom {width: 100%; margin-top: 2em; text-align: center; font-size: 90%; color: white; padding: 1em 0;
+    background-color: #252525; border-top: 2em solid @border; clear: both;
+}
 
 
 #head {width: 100%; overflow: hidden; }
@@ -85,14 +94,21 @@ p {margin: 0.4em 0;}
 #head h1 a {color: #222222;}
 #head p {font-variant: small-caps; margin-top: -1em; }
 
-#navigation {width: 900px; margin: 0 auto; overflow: hidden; background-color: white; padding: 0 1em 1em 1em;}
+#navigation { font-family: "Lucida-Grande","Verdana",sans-serif;
+        width: 900px; margin: 0 auto; overflow: hidden; background-color: white; padding: 0 1em 1em 1em;}
 #navigation .sections {float: left; }
 #navigation  a, #navigation span {display: block; float: left; margin-right: 0.5em;
-    padding: 0.5em 1em 0.5em 1em; font-variant: small-caps; font-size: 110%;
-    .tab-borders; }
-#navigation a {background-color: @medio;}
-#navigation span {color: white;}
-#navigation a:hover {background-color: @oscuro;}
+    padding: 0.5em 1em 0.5em 1em; font-size: 110%;
+    background-image: url(../images/cellshade.png); background-repeat: repeat-x; background-position: 0 0px;
+    .tab-borders; color: #333333;}
+#navigation span {color: white; background-image: none;}
+#navigation a:hover {background-position: 0px -4px; }
+
+#navigation .session {float: right;  margin-right: -1em;}
+#navigation .session a {padding: 0.3em; color: white; margin-top: 0.2em;
+    background-color: @border; .round;
+    background-image: none;}
+#navigation .session a:hover {background: @border;}
 
 .content {padding: 1em 2em;}
 
@@ -104,15 +120,26 @@ p {margin: 0.4em 0;}
 .col3 h2 {margin-left: 8px;}
 .col3 h1 {margin-left: 8px; font-size: 180%; font-style: normal;}
 .col3 img { background-color: @medio; width: 250px;height: 150px; margin-bottom: 1em;
-    border: 8px solid @medio;  .round; }
+    border: 8px solid @border;  .round; }
 .col3 p {margin-left: 8px;}
 p.about {font-size: 120%; font-style: italic; line-height: 1.5em;}
 
-.dialog {width: 70%; margin: 3em auto; border: 8px solid @medio; padding: 1em; .round;}
-.dialog h2 {margin-left: 6em; margin-bottom: 0.2em;}
-.dialog p.info {margin-left: 6em; font-style: italic; color: gray;}
-.dialog ul {margin: 1em 0 0.5em 9em;}
-.dialog ul li {list-style-type: none; margin-left: 0; margin-top: 0.2em;}
+.divided {width: 100%; overflow: hidden; margin: 2em 0;}
+.divided form {float: left; width: 45%;
+    background-color: @fondo; border: 1px solid @border; padding: 1em;}
+#new_user_session { margin-right: 2%;}
+
+.divided input[type=text], .divided input[type=password]
+{border-style: solid; border-width: 1px; width: 220px;
+        border-color: #D4D4D4 #EBEBEB #EBEBEB #D4D4D4;}
+.dialog .fieldWithErrors input, .divided .fieldWithErrors input {
+    border-color: #c00;
+}
+.dialog {width: 70%; margin: 3em auto; }
+.dialog form {    background-color: @fondo; border: 1px solid @border; padding: 1em;}
+
+.divided p.info, .dialog p.info {margin-left: 1em;}
+
 form input[type=text], form input[type=password] {border: 1px solid @medio; padding: 2px;}
 form input[type=radio] {margin-right: 0.3em; display: block; float: left; margin-top: 0.15em;}
 form p {width: 100%; overflow: hidden; margin-bottom: 0.2em;}
@@ -120,20 +147,22 @@ form p span.fake_field {
     display: block; margin-left: 9em; width: 15em; color: gray;
     border: 1px solid white; padding: 2px; }
 form span {margin-left: 0.2em;}
-form span.fieldWithErrors {float: left; margin-left: 0; border: 2px solid #c00; }
-form p.info {margin: 1em 0 0.5em 8em; color: #4F4F4F;}
-form p.save {background-color: @medio; padding: 0.5em 2em; margin: 1em 6em 1em 6em; width: auto;
+
+form span.fieldWithErrors input {border-color: #c00;}
+
+form p.info {margin: 1em 0 0.5em 8em; color: gray; font-style: italic;}
+form p.save {background-color: @fondo; padding: 0.5em 2em; margin: 1em 6em 1em 6em; width: auto;
     -moz-border-radius: 1em; -webkit-border-radius: 1em;}
 form label {float: left; display: block; width: 6em; text-align: right; padding-top: 0.2em;
-    margin-right: 0.5em; margin-left: 2.5em; color: gray;}
+    margin-right: 0.5em; margin-left: 2.5em; color: @darkgris;}
 form p.error_message {color: #c00; margin-left: 9em; margin-bottom: 1em;}
 form p.error {background-color: #FFBFBF; padding: 5px 0; text-align: center; .round;}
-
+form a {display: block; float: left; margin: 2em 0 0 9em;}
 form .disabled {-moz-opacity: 0.5;}
 form .disabled span {color: gray;}
 
 .errorExplanation {margin-left: 2em;}
-.errorExplanation h2 {font-size: 100%; margin-left: 0;}
+.errorExplanation h2 {font-size: 100%; margin-left: 0; color: #c00;}
 
 
 #encuesta input[type=text] {width: 6em;}
