ichart first functional version

--- a/app/views/electricidad/edit.html.erb
+++ b/app/views/electricidad/edit.html.erb
@@ -1,3 +1,4 @@
 <%= title t(:title) %>
 
+<p class="about">Para finalizar, complete la evolución del consumo eléctrico de su vivienda.</p>
 <%= render :partial => 'invoices/edit' %>
