--- a/app/views/layouts/e3e.html.erb
+++ b/app/views/layouts/e3e.html.erb
@@ -48,7 +48,8 @@
     </div>
 
     <div class="bottom">
-      <%= link_to 'Hecho a mano por c a l c', 'http://calclab.com' %>
+      E3E v0.0929 -
+      <%= link_to 'Software hecho a mano por &nbsp;<span class="calc">calc</span>', 'http://calclab.com' %>
     </div>
   </body>
 </html>
