--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,8 @@
+<%= title t(:title) %>
+
+<p class="about">Mediante este formulario puede modificar los datos de acceso a la aplicación.
+Si no desea cambiar la contraseña, deje ese campo y el de confirmación en blanco.</p>
+
 <div class="dialog">
   <%= render :partial => 'form' %>
 </div>
