--- a/app/views/gas/edit.html.erb
+++ b/app/views/gas/edit.html.erb
@@ -1,3 +1,4 @@
 <%= title t(:title) %>
 
+<p class="about">Para completar la encuesta necesitamos saber la evolución del consumo de gas de su vivienda.</p>
 <%= render :partial => 'invoices/edit' %>
