--- a/app/views/surveys/edit.html.erb
+++ b/app/views/surveys/edit.html.erb
@@ -34,7 +34,7 @@
 <p class="about">Los datos de esta encuesta nos permitirán saber las características energéticas
 de su vivienda y sus hábitos de consumo.</p>
 <p class="about">Le rogamos nos conteste a estos datos aunque sea de forma aproximada y
-por favor, pulse <a href="#guardar">"Guardar"</a>  cuando complete el cuestionario. Gracias.</p>
+por favor, pulse el botón <a href="#guardar">Guardar</a>  cuando complete el cuestionario. Gracias.</p>
 
 
 <div id="javascript">
