--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -54,11 +54,11 @@ html {
 
 .container {width: 100%; overflow: hidden;}
 
-h1, h2, h3 {color: @gris;}
+h1, h2 {color: @gris;}
 h1 {font-size: 260%; font-weight: bold; letter-spacing: -0.05em;}
 h2 {font-size: 150%;}
-h3 {font-size: 125%; border-bottom: 1px solid #9F9F9F; margin: 2em 0 1em 0; padding-left: 6.5em;}
-h4 {font-size: 100%; border-bottom: 1px solid #9F9F9F; margin-top: 2em ; margin-left: 7em; padding-left: 1em;  }
+h3 {font-size: 125%; color: @darkgris; border-bottom: 1px solid #9F9F9F; margin: 2em 0 1em 0; padding-left: 6.5em;}
+h4 {font-size: 100%; color: @darkgris; border-bottom: 1px solid #9F9F9F; margin-top: 2em ; margin-left: 7em; padding-left: 1em;  }
 li {list-style-type: disc; margin-left: 2em;}
 
 
@@ -84,9 +84,10 @@ p {margin: 0.4em 0;}
     height:500px;
 }
 
-.bottom {width: 100%; margin-top: 2em; text-align: center; font-size: 90%; color: white; padding: 1em 0;
+.bottom {width: 100%; margin-top: 2em; text-align: center; font-size: 90%; color: @gris; padding: 1em 0;
     background-color: #252525; border-top: 2em solid @border; clear: both;
 }
+.bottom a:hover {color: white;}
 
 
 #head {width: 100%; overflow: hidden; }
@@ -142,6 +143,7 @@ p.about {font-size: 120%; font-style: italic; line-height: 1.5em;}
 
 form input[type=text], form input[type=password] {border: 1px solid @medio; padding: 2px;}
 form input[type=radio] {margin-right: 0.3em; display: block; float: left; margin-top: 0.15em;}
+form input[type=submit] {margin-top: 0.5em;}
 form p {width: 100%; overflow: hidden; margin-bottom: 0.2em;}
 form p span.fake_field {
     display: block; margin-left: 9em; width: 15em; color: gray;
@@ -190,3 +192,5 @@ table.dataset span {margin-left: 0; margin-right: 1em; color: gray;}
 table.users { margin: 1em; }
 table.users thead {background-color: gray; color: white;}
 table.users td {padding: 0.2em 1em;}
+
+.calc {font-family: monospace; letter-spacing: 0.5em; font-size: 1.3em;}
