--- a/public/stylesheets/e3e.less
+++ b/public/stylesheets/e3e.less
@@ -18,6 +18,12 @@ html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pr
 @color4: #00FFB4;
 @color5: #468F9B;
 
+@acolor1: #490A3D;
+@acolor2: #BD1550;
+@acolor3: #E97F02;
+@acolor4: #F8CA00;
+@acolor5: #8A9B0F;
+
 html {
     font-size: 80%;
     background-color: @fondo;
@@ -101,7 +107,7 @@ p {margin: 0.4em 0;}
 #navigation  a, #navigation span {display: block; float: left; margin-right: 0.5em;
     padding: 0.5em 1em 0.5em 1em; font-size: 110%;
     background-image: url(../images/cellshade.png); background-repeat: repeat-x; background-position: 0 0px;
-    .tab-borders; color: #333333;}
+    .tab-borders; color: black;}
 #navigation span {color: white; background-image: none;}
 #navigation a:hover {background-position: 0px -4px; }
 
